# 2025_OpenGL_window

./: .gitignore  CMakeLists.txt  OpenGL.sln  README.md
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  main.cpp
sources/: main.cpp  version.cpp_cmake_in  version.h_cmake_in
